# beach-bot

./: .gitignore  CONTRIBUTING.md  Makefile  bot.py  db.sqlite  pyproject.toml
src/: __init__.py  error_handling.py  event_handling.py  help.py  leaderboard.py  stuff.py  unsplash.py
src/utils/: apis.py  etcs.py  unsplash_photos.py
src/utils/sql/: starter.sql
